--- a/.github/workflows/github_checkout.yml
+++ b/.github/workflows/github_checkout.yml
@@ -5,7 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: github/checkout@v2
-    - uses: action/setup-python@v1
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
     - uses: BSFishy/pip-action@v1
       with:
         requirements: requirements.txt
