--- a/.github/workflows/github_checkout.yml
+++ b/.github/workflows/github_checkout.yml
@@ -4,7 +4,7 @@ jobs:
   checkout-bats-version:
     runs-on: ubuntu-latest
     steps:
-    - uses: github_action/checkout@v2
+    - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
         python-version: '3.x'
