--- a/.github/workflows/github_checkout.yml
+++ b/.github/workflows/github_checkout.yml
@@ -8,7 +8,6 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - uses: BSFishy/pip-action@v1
-      with:
-        requirements: requirements.txt
+    - name: install modules
+    - run: pip install -r requirements.txt
     - run: python test.py
