--- a/.github/workflows/github_checkout.yml
+++ b/.github/workflows/github_checkout.yml
@@ -1,12 +1,17 @@
 name: learn-github-actions
 on: [push]
 jobs:
-  checkout-bats-version:
+  setup-python:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
     steps:
     - uses: actions/checkout@v2
+    - name: setup python ${{matrix.python-version}}
     - uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
-    - run: pip install -r requirements.txt
+        python-version: ${{matrix.python-version}}
+    - name: install dependencies
+      run: pip install -r requirements.txt
     - run: python test.py
