--- a/.github/workflows/github_checkout.yml
+++ b/.github/workflows/github_checkout.yml
@@ -13,5 +13,5 @@ jobs:
       with:
         python-version: ${{matrix.python-version}}
     - name: install dependencies
-      run: pip install -r requirements.txt
+    - run: pip install -r requirements.txt
     - run: python test.py
