--- a/.github/workflows/github_checkout.yml
+++ b/.github/workflows/github_checkout.yml
@@ -3,13 +3,10 @@ on: [push]
 jobs:
   setup-python:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.5]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
-        python-version: ${{matrix.python-version}}
+        python-version: '3.8.x'
     - run: pip install -r requirements.txt
     - run: python test.py
