--- a/.github/workflows/github_checkout.yml
+++ b/.github/workflows/github_checkout.yml
@@ -8,5 +8,6 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: '3.8.x'
+    - run: pip install cython
     - run: pip install -r requirements.txt
     - run: python test.py
