--- a/.github/workflows/github_checkout.yml
+++ b/.github/workflows/github_checkout.yml
@@ -8,6 +8,8 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: '3.8.x'
+    - run: conda create -n test_venv python=3.8
+    - run: conda activate test_venv
     - run: pip install cython
     - run: pip install -r requirements.txt
     - run: python test.py
