--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ matplotlib==3.0.2
 numpy==1.19.5
 opencv-python==4.2.0.34
 opencv-python-headless==4.5.1.48
+ipython-genutils==0.2.0
 pandas==1.1.1
 pydensecrf @ git+https://github.com/lucasb-eyer/pydensecrf.git@0d53acbcf5123d4c88040fe68fbb9805fc5b2fb9
 seaborn==0.9.0
