--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ pydensecrf @ git+https://github.com/lucasb-eyer/pydensecrf.git@0d53acbcf5123d4c8
 seaborn==0.9.0
 segmentation-models-pytorch==0.1.3
 timm==0.3.2
-torch==1.7.1+cu101
+torch==1.7.1
 torchaudio==0.7.2
 torchvision==0.8.2+cu101
 wandb==0.10.28
