--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,5 @@ segmentation-models-pytorch==0.1.3
 timm==0.3.2
 torch==1.7.1
 torchaudio==0.7.2
-torchvision==0.8.2+cu101
+torchvision==0.8.2
 wandb==0.10.28
